--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-EMERGENT_API_KEY=sk-emergent-9Db725f83B04d84756
-EMERGENT_API_URL=https://api.emergent.sh/openai/v1/chat/completions
+EMERGENT_API_KEY=....api key......
+EMERGENT_API_URL=.....url....
 EMERGENT_MODEL=gpt-3.5-turbo
+
